# docs/swagger.yaml
@@ -201,7 +201,7 @@ definitions:
     - ContestTypeTournament
     - ContestTypeLeague
     - ContestTypeCasual
-  GAMERS-BE_internal_discord_application_port.DiscordChannel:
+  GAMERS-BE_internal_discord_application_dto.DiscordChannel:
     properties:
       guild_id:
         type: string
@@ -216,7 +216,7 @@ definitions:
       type:
         type: integer
     type: object
-  GAMERS-BE_internal_discord_application_port.DiscordGuild:
+  GAMERS-BE_internal_discord_application_dto.DiscordGuild:
     properties:
       icon:
         type: string
@@ -419,56 +419,136 @@ definitions:
     type: object
   GAMERS-BE_internal_point_application_dto.CreateValorantScoreTableDto:
     properties:
-      ascendant:
+      ascendant_1:
         type: integer
-      bronze:
+      ascendant_2:
         type: integer
-      diamond:
+      ascendant_3:
         type: integer
-      gold:
+      bronze_1:
         type: integer
-      immortal:
+      bronze_2:
         type: integer
-      iron:
+      bronze_3:
         type: integer
-      platinum:
+      diamond_1:
+        type: integer
+      diamond_2:
+        type: integer
+      diamond_3:
+        type: integer
+      gold_1:
+        type: integer
+      gold_2:
+        type: integer
+      gold_3:
+        type: integer
+      immortal_1:
+        type: integer
+      immortal_2:
+        type: integer
+      immortal_3:
+        type: integer
+      iron_1:
+        type: integer
+      iron_2:
+        type: integer
+      iron_3:
+        type: integer
+      platinum_1:
+        type: integer
+      platinum_2:
+        type: integer
+      platinum_3:
         type: integer
       radiant:
         type: integer
-      silver:
+      silver_1:
+        type: integer
+      silver_2:
+        type: integer
+      silver_3:
         type: integer
     required:
-    - ascendant
-    - bronze
-    - diamond
-    - gold
-    - immortal
-    - iron
-    - platinum
+    - ascendant_1
+    - ascendant_2
+    - ascendant_3
+    - bronze_1
+    - bronze_2
+    - bronze_3
+    - diamond_1
+    - diamond_2
+    - diamond_3
+    - gold_1
+    - gold_2
+    - gold_3
+    - immortal_1
+    - immortal_2
+    - immortal_3
+    - iron_1
+    - iron_2
+    - iron_3
+    - platinum_1
+    - platinum_2
+    - platinum_3
     - radiant
-    - silver
+    - silver_1
+    - silver_2
+    - silver_3
     type: object
   GAMERS-BE_internal_point_application_dto.ValorantScoreTableResponse:
     properties:
-      ascendant:
+      ascendant_1:
         type: integer
-      bronze:
+      ascendant_2:
         type: integer
-      diamond:
+      ascendant_3:
         type: integer
-      gold:
+      bronze_1:
         type: integer
-      immortal:
+      bronze_2:
         type: integer
-      iron:
+      bronze_3:
         type: integer
-      platinum:
+      diamond_1:
+        type: integer
+      diamond_2:
+        type: integer
+      diamond_3:
+        type: integer
+      gold_1:
+        type: integer
+      gold_2:
+        type: integer
+      gold_3:
+        type: integer
+      immortal_1:
+        type: integer
+      immortal_2:
+        type: integer
+      immortal_3:
+        type: integer
+      iron_1:
+        type: integer
+      iron_2:
+        type: integer
+      iron_3:
+        type: integer
+      platinum_1:
+        type: integer
+      platinum_2:
+        type: integer
+      platinum_3:
         type: integer
       radiant:
         type: integer
       score_table_id:
         type: integer
-      silver:
+      silver_1:
+        type: integer
+      silver_2:
+        type: integer
+      silver_3:
         type: integer
     type: object
   GAMERS-BE_internal_storage_application_dto.UploadResponse:
@@ -3195,7 +3275,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Returns all guilds the GAMERS bot is a member of
+      description: Returns all guilds where both the GAMERS bot and the authenticated
+        user are members
       produces:
       - application/json
       responses:
@@ -3203,22 +3284,27 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/GAMERS-BE_internal_discord_application_port.DiscordGuild'
+              $ref: '#/definitions/GAMERS-BE_internal_discord_application_dto.DiscordGuild'
             type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/GAMERS-BE_internal_global_response.Response'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/GAMERS-BE_internal_global_response.Response'
       security:
       - BearerAuth: []
-      summary: Get bot's guilds
+      summary: Get available guilds for contest creation
       tags:
       - Discord
   /discord/guilds/{guildId}/channels:
     get:
       consumes:
       - application/json
-      description: Returns all text channels in a guild that the bot has access to
+      description: Returns all text channels in a guild where both the bot and the
+        authenticated user are members
       parameters:
       - description: Discord Guild ID
         in: path
@@ -3232,10 +3318,18 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/GAMERS-BE_internal_discord_application_port.DiscordChannel'
+              $ref: '#/definitions/GAMERS-BE_internal_discord_application_dto.DiscordChannel'
             type: array
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/GAMERS-BE_internal_global_response.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/GAMERS-BE_internal_global_response.Response'
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/GAMERS-BE_internal_global_response.Response'
         "500":
